--- a/tools/ipodloader2/Makefile
+++ b/tools/ipodloader2/Makefile
@@ -1,11 +1,11 @@
 CC      = arm-elf-gcc
-CFLAGS  = -Wall -ffreestanding -nostdinc -fomit-frame-pointer
+CFLAGS  = -O2 -Wall -ffreestanding -nostdinc -fomit-frame-pointer
 LDFLAGS = -Wl,-Tarm_elf_40.x -nostartfiles -fomit-frame-pointer
 OBJCOPY = arm-elf-objcopy
 
 all: loader.bin
 #	@echo "Building firmware image"
-	@./make_fw -g 5g -o my_sw.bin -i apple_os.bin $<
+	@./make_fw -g 4g -o my_sw.bin -i apple_os.bin $<
 
 clean:
 	@echo "Cleaning up"
