Add config file support; display console on every \n; support other blocksizes on ext2fs; use 3.4.3 toolchain by default; actually return an error if FAT32 file not found.

--- a/tools/ipodloader2/Makefile
+++ b/tools/ipodloader2/Makefile
@@ -1,7 +1,7 @@
-CC      = arm-elf-gcc
+CC      = arm-uclinux-elf-gcc
 CFLAGS  = -O2 -Wall -pedantic -std=c99 -ffreestanding -nostdinc -fomit-frame-pointer
 LDFLAGS = -Wl,-Tarm_elf_40.x -nostartfiles -fomit-frame-pointer
-OBJCOPY = arm-elf-objcopy
+OBJCOPY = arm-uclinux-elf-objcopy
 
 all: loader.bin
 #	@echo "Building firmware image"
