Support the wheel on 4gs :-)  The menu is still rather laggy, but it's better than before. And pushing a button will actually only move one entry now :-)

--- a/tools/ipodloader2/Makefile
+++ b/tools/ipodloader2/Makefile
@@ -1,6 +1,6 @@
 CROSS    ?= arm-uclinux-elf
 CC        = $(CROSS)-gcc
-MYCFLAGS  = -O2 -Wall -pedantic -std=c99 -ffreestanding -nostdinc -fomit-frame-pointer
+MYCFLAGS  = -O2 -Wall -std=gnu99 -ffreestanding -nostdinc -fomit-frame-pointer
 MYLDFLAGS = -Wl,-Tarm_elf_40.x -nostartfiles -fomit-frame-pointer
 OBJCOPY   = $(CROSS)-objcopy
 
