HUGE multiple patches by Thomas Tempelmann - timeout support, image type autodetection, HFS+ and MacPod support, argument passing, and much more. I also added a bit to fwfs.c that lets you use subimages (osos@ osos0 etc.)

--- a/tools/ipodloader2/Makefile
+++ b/tools/ipodloader2/Makefile
@@ -1,8 +1,16 @@
-CROSS    ?= arm-uclinux-elf
-CC        = $(CROSS)-gcc
+# makefile for iPodLoader2
+#
+# Note by TT: the option "-mstructure-size-boundary=8" is necessary when compiling macpartitions.cc for the structs to get the correct sizes!
+
+CROSS    ?= arm-uclinux-elf-
+CC        = $(CROSS)gcc
 MYCFLAGS  = -O2 -Wall -std=gnu99 -ffreestanding -nostdinc -fomit-frame-pointer
+# -DDEBUG
+MYCPPFLAGS= -O2 -Wall -nostdinc -fomit-frame-pointer -mstructure-size-boundary=8
 MYLDFLAGS = -Wl,-Tarm_elf_40.x -nostartfiles -fomit-frame-pointer
-OBJCOPY   = $(CROSS)-objcopy
+OBJCOPY   = $(CROSS)objcopy
+
+OBJFILES = startup.o loader.o fb.o ipodhw.o console.o minilibc.o ata2.o vfs.o fat32.o ext2.o fwfs.o keypad.o menu.o config.o macpartitions.o
 
 all: loader.bin
 #	@echo "Building firmware image"
@@ -10,15 +18,19 @@ all: loader.bin
 
 clean:
 	@echo "Cleaning up"
-	@rm -f *.o *~ loader.bin loader.elf nohup.out my_sw.bin ipodhw.o ata.o ata2.o
+	@rm -f *.o *~ loader.bin loader.elf nohup.out my_sw.bin $(OBJFILES)
 
 loader.bin: loader.elf
 	@echo "Converting $< to binary"
 	@$(OBJCOPY) -O binary $< $@
 
-loader.elf: startup.o loader.o fb.o ipodhw.o console.o minilibc.o ata2.o vfs.o fat32.o ext2.o fwfs.o keypad.o menu.o config.o
+loader.elf: $(OBJFILES)
 	@echo "Linking $@"
 	@$(CC) $(MYLDFLAGS) $(LDFLAGS) -o $@ $^
+
+%.o:%.cc
+	@echo "Compiling $<"
+	@$(CC) $(MYCPPFLAGS) $(CFLAGS) -c $< -o $@
 
 %.o:%.c
 	@echo "Compiling $<"
